Fixed Bottom graphs being cut off in Dashboard page

--- a/src/pages/dashboard/styles.less
+++ b/src/pages/dashboard/styles.less
@@ -1,5 +1,6 @@
 .scroll-container {
-  height: 94vh;
+  height: calc(94vh - 40px);
+  /* Adjust as needed based on the total height */
   // width: 99%;
   /* Adjust the height as needed */
   overflow-y: auto;
